# routes/contacts.js
@@ -1,9 +1,9 @@
 const router = require('express').Router();
 const contactsController = require("../controllers/contacts");
 
-router.get('/', contactsController.listContacts);
+router.get('/contacts', contactsController.listContacts);
 
-router.get('/:id', contactsController.singleContact);  
+router.get('/single/:id', contactsController.singleContact);  
 
 router.post('/newContact', contactsController.newContact);
 
