# routes/index.js
@@ -1,10 +1,10 @@
-const router = require('express').Router();
-const controller = require('../controllers/index');
+// const router = require('express').Router();
+// const controller = require('../controllers/index');
 
-router.use('/contacts', require('./contacts'));
-router.use('/swagger', require('./swagger'));
+// router.use('/contacts', require('./contacts'));
+// router.use('/swagger', require('./swagger'));
 
-router.get('/', controller.name1);
+// router.get('/', controller.name1);
 
-// module.exports = router;
+// // module.exports = router;
 
